# fromthetransistor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
hdl/01_gates/: _and.v  _not.v  gates.v  gates16.v
hdl/02_boolean_arithmetic/: add16.v  alu.v  full_adder.v  half_adder.v  inc16.v
tb/: test_dff.py  testbench.py
tb/01_gates/: test_and.py  test_and16.py  test_dmux.py  test_dmux4way.py  test_gates.py  test_mux.py  test_mux16.py  test_mux4way16.py  test_mux8way16.py  test_not.py  test_not16.py  test_or.py  test_or16.py  test_or8way.py  test_xor.py
tb/02_boolean_arithmetic/: test_add16.py  test_alu.py  test_full_adder.py  test_half_adder.py  test_inc16.py
tb/quickstart_examples/: test_my_design.py
