[tool.poetry]
name = "fromthetransistor"
version = "0.1.0"
description = ""
authors = ["Lukas Weidenholzer <lukas@weidenholz.dev>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
cocotb = "^1.6.2"
cocotb-test = "^0.2.2"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
